# circcov

./: LICENSE  README.md  pyproject.toml
src/circcov/: __init__.py  circulant.py  kernels.py  toeplitz.py  utils.py
tests/: conftest.py  test_circulant.py  test_kernels.py  test_runtime.py  test_toeplitz.py
